syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

service Feeder {
    rpc CreateFeed (CreateFeedRequest) returns (CreateFeedReply) {}
    rpc GetFeeds (GetFeedsRequest) returns (GetFeedsReply) {}
    rpc GetArticles (GetArticlesRequest) returns (GetArticlesReply) {}
    rpc GetArticle (GetArticleRequest) returns (GetArticleReply) {}
}

message CreateFeedRequest {
    string category = 1;
    string provider = 2;
    string url = 3;
    string request_uri = 4;
}

message CreateFeedReply {
    uint64 feed_id = 1;
    string resource_uri = 2;
    string err = 3;
}

message GetArticlesRequest {
    uint64 feed_id = 1;
}

message Article {
    string title = 1;
    string description = 2;
    string link = 3;
    google.protobuf.Timestamp published = 4;
    string guid = 5;
    string thumbnail_image_url = 6;
    string html_content = 7;
}

message GetArticlesReply {
    repeated Article Articles = 1; 
    string err = 2;
}

message GetArticleRequest {
    uint64 feed_id = 1;
    string article_guid = 2;
}

message GetArticleReply {
    Article Article = 1; 
    string err = 2;
}

message GetFeedsRequest {
    string category = 1;
    string provider = 2;
}

message Feed {
    uint64 feed_id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    string category = 4;
    string provider = 5;
    string url = 6;
}

message GetFeedsReply {
    repeated Feed Feeds = 1;
    string err = 2;
}

